--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"start" :"node server\server.js" ,
+	"start" :"node server\ server.js" ,
     "test": "mocha server/**/*.test.js" ,
 	"test-watch" : "nodemon -exec \" npm test\" "
   },
   "engines" : {
-	"node":"v8.10.0"
+	"node":"8.10.0"
   },
   "author": "",
   "license": "ISC",
