--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha server/**/*.test.js",
+    "test": " export NODE_ENV=test  || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon -exec \" npm test\" "
   },
   "engines": {
@@ -15,10 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.10",
     "mongodb": "^2.2.31",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "validator": "^10.4.0"
   },
   "devDependencies": {
     "expect": "^23.4.0",
